--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.suresh.automation</groupId>
+  <groupId>com.mycompany.automation</groupId>
   <artifactId>SeleniumTestNGFramework</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -12,42 +12,50 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <!-- Dependency Versions -->
+    <selenium.version>4.21.0</selenium.version>
+    <testng.version>7.10.2</testng.version>
+    <webdrivermanager.version>5.8.0</webdrivermanager.version>
+    <extentreports.version>5.1.1</extentreports.version>
+    <poi.version>5.2.3</poi.version>
+    <!-- Plugin Versions -->
+    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.21.0</version>
+      <version>${selenium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>7.10.2</version>
+      <version>${testng.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
-        <version>5.8.0</version>
+        <version>${webdrivermanager.version}</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>com.aventstack</groupId>
         <artifactId>extentreports</artifactId>
-        <version>5.1.1</version>
+        <version>${extentreports.version}</version>
     </dependency>
     <!-- For reading .xlsx files -->
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
-        <version>5.2.3</version>
+        <version>${poi.version}</version>
     </dependency>
     <!-- For reading .xls files -->
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <version>5.2.3</version>
+        <version>${poi.version}</version>
     </dependency>
   </dependencies>
 
@@ -56,7 +64,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.2.5</version>
+            <version>${maven.surefire.plugin.version}</version>
             <configuration>
                 <suiteXmlFiles>
                     <suiteXmlFile>testng.xml</suiteXmlFile>
